[tool.poetry]
name = "not-decided"
version = "0.1.0"
description = ""
authors = ["Rohit <rk22012001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
ssort = "^0.14.0"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"